--- a/src/main/resources/templates/index.fxml
+++ b/src/main/resources/templates/index.fxml
@@ -3,9 +3,31 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.todeschini.tarefas.controller.IndexController">
    <children>
-      <Label layoutX="158.0" layoutY="24.0" prefHeight="17.0" prefWidth="313.0" text="Sistema de Tarefas" />
+      <Label layoutX="158.0" layoutY="24.0" prefHeight="17.0" prefWidth="313.0" text="Sistema de Tarefas" textFill="#eb0c0c" />
+      <TableView fx:id="tableTarefas" layoutX="237.0" layoutY="62.0" onMouseClicked="#getTarefaByRowTable" prefHeight="275.0" prefWidth="331.0">
+        <columns>
+          <TableColumn fx:id="colunaId" prefWidth="75.0" text="ID" />
+          <TableColumn fx:id="colunaNome" prefWidth="75.0" text="Tarefa" />
+            <TableColumn fx:id="colunaResponsavel" prefWidth="88.0" text="Responsvel" />
+            <TableColumn fx:id="colunaStatus" prefWidth="62.0" text="Status" />
+        </columns>
+      </TableView>
+      <AnchorPane layoutX="28.0" layoutY="62.0" prefHeight="269.0" prefWidth="203.0">
+         <children>
+            <Label layoutX="8.0" layoutY="6.0" text="ID" />
+            <Label layoutX="5.0" layoutY="52.0" text="Nome" />
+            <Label layoutX="7.0" layoutY="109.0" text="Responsavel" />
+            <Label layoutX="3.0" layoutY="170.0" text="Status" />
+            <TextField fx:id="txtID" layoutX="22.0" layoutY="23.0" />
+            <TextField fx:id="txtNome" layoutX="21.0" layoutY="77.0" />
+            <TextField fx:id="txtResponsavel" layoutX="21.0" layoutY="135.0" />
+            <TextField fx:id="txtStatus" layoutX="21.0" layoutY="187.0" />
+         </children>
+      </AnchorPane>
+      <Button fx:id="btnSalvar" layoutX="75.0" layoutY="352.0" mnemonicParsing="false" onAction="#salvarTarefa" text="Salvar" />
+      <Button fx:id="btnLimpar" layoutX="176.0" layoutY="353.0" mnemonicParsing="false" onAction="#clean" text="Limpar" />
+      <Button fx:id="btnDeletar" layoutX="273.0" layoutY="354.0" mnemonicParsing="false" onAction="#deletarTarefa" text="Deletar" />
    </children>
 </AnchorPane>
